API повик за добиена одговор на добиена пошта